fix: resize against overflowing elements

--- a/assets/scss/partials/menu.scss
+++ b/assets/scss/partials/menu.scss
@@ -92,6 +92,7 @@ nav.menu ul {
     margin: 0px;
     list-style-type: none;
     line-height: 22px;
+    box-sizing: border-box;
 }
 
 nav .site-nav ul li {
